--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -30,6 +30,6 @@ jobs:
           name: hello-artifact
           path: ./artifacts
           
-      - name: Display content of the text file
+      - name: Display content of file
         run: cat ./artifacts/hello.txt
     
